<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/wallet_transactions"
        android:icon="@drawable/ic_earning_report"
        android:title="@string/Earning_report"
        />

    <item
        android:id="@+id/menu_orders"
        android:icon="@drawable/ic_cart"
        android:title="@string/orders" />


    <item
        android:id="@+id/menu_customers"
        android:icon="@drawable/ic_customer"
        android:title="@string/customers"
        android:visible="false"/>

    <item
        android:id="@+id/how_to_use"
        android:icon="@drawable/ic_how_to_use"
        android:title="@string/How_To_use"/>

    <item
        android:id="@+id/Feedback"
        android:icon="@drawable/ic_feedback"
        android:title="@string/Feedback"/>
    <item
        android:id="@+id/Contact_us"
        android:icon="@drawable/ic_contact_us"
        android:title="@string/Contact_us"/>
    <item
        android:id="@+id/website_visit"
        android:icon="@drawable/ic_website"
        android:title="@string/Website_visit"/>

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"/>




    <item
        android:id="@+id/menu_products"
        android:icon="@drawable/ic_product"
        android:title="@string/products"
        android:visible="false"/>

    <item
        android:id="@+id/menu_terms"
        android:icon="@drawable/ic_terms"
        android:title="@string/terms_conditions"
        android:visible="false"/>

    <item
        android:id="@+id/menu_policy"
        android:icon="@drawable/ic_privacy"
        android:title="@string/privacy_policy"
        android:visible="false"/>


    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
</menu>