<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_shadow"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:hint="@string/measurement">

            <EditText
                android:id="@+id/edtMeasurement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:inputType="number"
                android:padding="@dimen/_7sdp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unit" />

            <Spinner
                android:id="@+id/spinnerUnit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/titleUnit" />
        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_3sdp"
        android:background="@color/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:hint="@string/original_price">

            <EditText
                android:id="@+id/edtOriginalPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:inputType="number"
                android:padding="@dimen/_7sdp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:hint="@string/discounted_price">

            <EditText
                android:id="@+id/edtDiscountedPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:inputType="number"
                android:padding="@dimen/_7sdp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_3sdp"
        android:background="@color/background" />


    <LinearLayout
        android:id="@+id/stockLyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:hint="@string/stock">

            <EditText
                android:id="@+id/edtStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:inputType="number"
                android:padding="@dimen/_7sdp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleUnitStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unit" />

            <Spinner
                android:id="@+id/spinnerUnitStock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/titleUnitStock" />
        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_3sdp"
        android:background="@color/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status" />

            <Spinner
                android:id="@+id/spinnerStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/titleStatus" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/imgAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_add"
                app:tint="@color/gray" />

            <ImageView
                android:id="@+id/imgDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_delete" />



        </LinearLayout>

    </LinearLayout>

</LinearLayout>